<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/metadata_background" >

    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/main_header_selector"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/loading"
                android:src="@drawable/action_bar_glyph_refresh_spinner" />

            <TextView
                android:id="@+id/progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:shadowColor="@color/text_shadow_green_button"
                android:shadowDx="0.0"
                android:shadowDy="2.0"
                android:shadowRadius="1.0"
                android:text="@string/_196_29"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large_button"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/logo"
                android:scaleType="fitStart"
                android:src="@drawable/logo_mini" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dip"
        android:orientation="vertical"
        android:padding="@dimen/form_padding" >

        <EditText
            android:id="@+id/street_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_top"
            android:hint="@string/street_name"
            android:singleLine="true" />

        <EditText
            android:id="@+id/street_number123"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_middle"
            android:hint="@string/street_number"
            android:singleLine="true" />

        <EditText
            android:id="@+id/city"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_middle"
            android:hint="@string/city"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_middle"
            android:hint="@string/phone"
            android:inputType="phone"
            android:singleLine="true" />

        <EditText
            android:id="@+id/time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_middle"
            android:hint="@string/time"
            android:inputType="time"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_middle"
            android:hint="@string/password"
            android:inputType="text"
            android:singleLine="true" />

        <RelativeLayout
            android:id="@+id/fragment_sign_up_imageview_row"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="@drawable/input_bottom" >
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48.0dp"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/phoneCall"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dip"
            android:background="@drawable/red_button"
            android:lines="2"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:gravity="center|center_vertical"
            android:text="@string/zadzwo_"
            android:textColor="#FFFFFF"
            android:visibility="visible" />





        <Button
            android:id="@+id/signUpButton"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dip"
            android:background="@drawable/red_button"
            android:enabled="false"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:gravity="center|center_vertical"
            android:text="@string/zam_w_taks_wk_"
            android:textColor="#FFFFFF"
            android:textSize="12dip" />

    </RelativeLayout>  
</RelativeLayout>